--- a/components/shared/Dialog/Dialog.module.css
+++ b/components/shared/Dialog/Dialog.module.css
@@ -1,7 +1,7 @@
 .dialog-container {
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -11,26 +11,27 @@
 }
 
 .dialog-box {
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: var(--color-primary);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
   padding: 20px;
-  max-width: 500px;
-  width: 100%;
-  max-height: 80%;
-  overflow-y: auto;
+  width: min(90%, 500px);
 }
 
 .dialog-title {
   font-size: 1.5rem;
   font-weight: bold;
   text-align: center;
+  margin-top: 16px;
 }
 
 .dialog-content {
   font-size: 1.2rem;
   line-height: 1.5;
-  margin: 30px 0px;
+  margin: 20px 0px;
   text-align: center;
 }
 
@@ -38,17 +39,3 @@
   display: flex;
   justify-content: center;
 }
-
-/* .dialog-button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  margin-left: 10px;
-  cursor: pointer;
-}
-
-.dialog-button:hover {
-  background-color: #0069d9;
-} */
