--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -1,3 +1,5 @@
+/* Contact styles */
+
 .contact {
   background-color: var(--color-primary);
   display: flex;
@@ -16,6 +18,8 @@
   padding: 20px 0;
   width: 30rem;
 }
+
+/* ContactForm styles */
 
 .contact-form {
   display: flex;
@@ -84,12 +88,14 @@
 }
 
 @media screen and (max-width: 768px) {
+  /* Contact styles */
   .contact-form-container {
     width: 20rem;
   }
 }
 
 @media screen and (max-width: 576px) and (max-height: 740px) {
+  /* Contact styles */
   .contact {
     scroll-margin-top: -120px;
   }
