--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -1,7 +1,6 @@
 /* Contact styles */
 
 .contact {
-  background-color: var(--color-primary);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +14,7 @@
 }
 
 .contact-form-container {
-  padding: 20px 0;
+  /* padding: 20px 0; */
   width: 30rem;
 }
 
