--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,12 +1,10 @@
 .footer {
-  background-color: var(--color-base-pewter);
+  background-color: var(--color-neutral-dark);
   padding: 20px;
   text-align: center;
-  border-top: 0.8px solid var(--color-primary);
 }
 
 .footer-content {
-  margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
