--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -1,13 +1,13 @@
 /* About styles */
 
 .about {
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 8rem;
-  scroll-margin-top: -88px;
+  /* TODO: Adjust scroll margin top for sections */
+  scroll-margin-top: 120px;
 }
 
 .about-me-content {
@@ -79,7 +79,6 @@
 @media screen and (max-width: 1200px) {
   /* About styles */
   .about {
-    padding-top: 240px;
     scroll-margin-top: -160px;
   }
 
