--- a/components/Portfolio/Portfolio.module.css
+++ b/components/Portfolio/Portfolio.module.css
@@ -31,8 +31,8 @@
 }
 
 .project-image-container {
-  min-width: 500px;
-  height: 360px;
+  min-width: 400px;
+  height: 300px;
   display: flex;
   justify-content: center;
   position: relative;
@@ -44,7 +44,6 @@
   border: 1px solid transparent;
   border-radius: 8px;
   transition: opacity 0.2s ease-in;
-  width: 500px;
 }
 
 .project-image:hover {
@@ -85,7 +84,7 @@
 
 .left,
 .right {
-  background-color: var(--color-primary);
+  background-color: transparent;
   color: var(--color-secondary);
   border: none;
 }
