--- a/components/Portfolio/Portfolio.module.css
+++ b/components/Portfolio/Portfolio.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  scroll-margin-top: 100px;
+  scroll-margin-top: 16vh;
 }
 
 .portfolio-heading {
@@ -146,10 +146,6 @@
 
 @media screen and (max-width: 768px) {
   /* Portfolio styles */
-  .portfolio {
-    padding: 40px 0;
-  }
-
   .project-container {
     width: 300px;
   }
@@ -175,6 +171,10 @@
 
 @media screen and (max-width: 576px) {
   /* Projects styles */
+  .portfolio {
+    scroll-margin-top: 10vh;
+  }
+
   .current-project {
     gap: 0.5rem;
   }
