--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -65,6 +65,7 @@
     width: 100%;
     height: 100vh;
     transition: 0.2s ease-in-out;
+    /* TODO: Fix background color for mobile nav menu */
     background-color: var(--color-neutral-dark);
     padding: 10px 10px 120px 10px;
     opacity: 0;
